--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
             </div>
           </div>
         </section>
+
+        <footer class="footer" id="code-url">
+          <a
+            href="https://github.com/tbrincatos/first-weather-app.git"
+            target="_blank"
+            >Open-Source Code</a
+          >
+          by Tamsin Brincat 👩‍🦰
+        </footer>
       </div>
     </div>
     <script src="src/app.js"></script>
